--- a/App/Voltflow/Views/Account/SettingsView.axaml
+++ b/App/Voltflow/Views/Account/SettingsView.axaml
@@ -15,7 +15,8 @@
     </Design.DataContext>
 
     <StackPanel
-        Width="256"
+        MaxWidth="256"
+        Margin="16"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Center"
         IsEnabled="{Binding !SettingsForm.Working}">
