--- a/App/Voltflow/Views/Pages/Map/SidePanels/StationInformationView.axaml
+++ b/App/Voltflow/Views/Pages/Map/SidePanels/StationInformationView.axaml
@@ -91,7 +91,8 @@
             <Button
                 HorizontalAlignment="Stretch"
                 Classes="Success"
-                Command="{Binding NavigateToCharging}">
+                Command="{Binding NavigateToCharging}"
+                IsEnabled="{Binding !Closed}">
                 <StackPanel Orientation="Horizontal">
                     <iconPacks:PackIconMaterialDesign Kind="Bolt" />
                     <TextBlock Text="Charge" />
